fix styles for cart card dark mode

--- a/src/globals.css
+++ b/src/globals.css
@@ -155,6 +155,9 @@
   .card_text-darkMode {
     color: #1e1e1e;
   }
+  .cartCard_bg-darkMode{
+    background-color: #BAFF29!important;
+  }
   .button-darkMode {
     color: #fff;
   }
